@@ -2,6 +2,7 @@
 
 === Edge
 
+* Set Radiant::Config to cache info in the Rails.cache [Jim Gay]
 * Markup fixes [Justin Blecher, Alex Wallace]
 * Use Rails for time zone handling [Kunal Shah, Josh French]
 * Allow extensions to declare dependencies [Josh French]
@@ -48,7 +49,7 @@ Cribbs]
 Allan]
 * Don't raise exception on unauthenticated request to /admin/logout.
 [Josh French]
-* Reverse view paths order in extension loader. [Sean Cribbs, Brent
+* Reverse view paths order in extension loader. [Sean Cribbs, Brent 
 Kroeker]
 * Remove obviated Ruby 1.8.7 compatibility patch. [Sean Cribbs]
 * Adjust StandardTags#relative_url_for for case when relative_url_root
